src/app/user-header/user-header.component.scss
.contcont {
  display: flex;
  flex-direction: column;
}

.container {
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 1rem 1rem 0.5rem 1rem;
}

.user-info {
  flex: 1;
  display: flex;
  justify-content: start;
  align-items: center;
  gap: 1rem;
}

.shoppingCart {
  --border-radius: 40px;
}

